fix: drawer scrollbars (desktop)

--- a/packages/website-react/components/Layout.module.scss
+++ b/packages/website-react/components/Layout.module.scss
@@ -1,4 +1,4 @@
-$duration: .1s;
+$duration: .2s;
 .layout{
   display: flex;
   background: transparent;
